--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <div class="mat-app-background basic-container">
   <table-filtering-example>loading</table-filtering-example>
 </div>
-<span class="version-info">Current build: 5.2.4</span>
-
-<!-- Copyright 2018 Google Inc. All Rights Reserved.
+<span class="version-info">Current build: 5.2.4</span>CallenableP
+<!-- Copyright 2018 Google Inc. All Rights ReservrodMo
+de()
     Use of this source code is governed by an MIT-style license that
     can be found in the LICENSE file at http://angular.io/license -->
 
